# joshument.dev

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  tailwind.config.js
css/: main.css
scss/: main.scss
scss/themes/: _dark.scss  _default.scss
src/: components.rs  gif_img.rs  local_time.rs  main.rs  pages.rs  route.rs  router.rs  theme_toggle.rs
src/components/: page_body.rs  toggle_dark.rs  typing_anim.rs
src/pages/: home.rs  notfound.rs
src/route/: about.rs  home.rs  legalstuff.rs  notfound.rs  projects.rs  refsheet.rs
