[package]
name = "my-cool-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
humantime = "2.1.0"
js-sys = "0.3.60"
serde = {version = "1.0.147", features = ["derive"]}
wasm-bindgen = "0.2.83"
web-sys = {version = "0.3.60", features = ["MediaQueryList", "HtmlDocument"]}
yew = "0.19.3"
yew-router = "0.16.0"
yewdux = "0.8.3"
