[package]
name = "test-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
web-sys = { version = "0.3.60", features = ["DomTokenList", "Element"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
